@@ -1,0 +1,14 @@
+From: tester@testhost
+Newsgroups: test
+Date: Thu, 07 Mar 2002 10:05:22 GMT
+Subject: foo (5) testfile.txt (1/2)
+Message-ID: <1001.dumb@test>
+Lines: 7
+
+begin 664 testfile.txt
+M>45N8R`M(%1E<W1F:6QE("@Q*0T*05-#24DZ(#(U-2XN,`T*__[]_/OZ^?CW
+M]O7T\_+Q\._N[>SKZNGHY^;EY./BX>#?WMW<V]K9V-?6U=33TM'0S\[-S,O*
+MR<C'QL7$P\+!P+^^O;R[NKFXM[:UM+.RL;"OKJVLJZJIJ*>FI:2CHJ&@GYZ=
+MG)N:F9B7EI64DY*1D(^.C8R+BHF(AX:%A(."@8!_?GU\>WIY>'=V=71S<G%P
+M;VYM;&MJ:6AG9F5D8V)A8%]>75Q;6EE85U955%-245!/3DU,2TI)2$=&141#
+M0D%`/SX]/#LZ.3@W-C4T,S(Q,"\N+2PK*BDH)R8E)",B(2`?'AT<&QH9&!<6
